k8s/gcp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aura-prod
  labels:
    app.kubernetes.io/part-of: project-aura
    environment: production
